--- a/vercel.json
+++ b/vercel.json
@@ -3,4 +3,7 @@
         { "src": "/api/.*", "dest": "/api/vercel.js" },
         { "src": "/.*", "dest": "/api/vercel.js" }
     ]
+   "github": {
+        "silent": true
+    }
 }
